[IDLE-139] test: 사용자 검색 기능 테스트
  - 닉네임으로 사용자를 검색하면 해당 닉네임을 포함하는 사용자 목록을 조회한다
  - 닉네임으로 사용자를 검색할 때 사용자가 검색되지 않으면 예외를 던진다